--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.37.0",
     "@heroicons/react": "^2.1.1",
+    "@types/leaflet": "^1.9.20",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.513.0",
     "react": "^18.2.0",
