--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "homepage": "https://cesarsevayos.github.io/app-busquedas-baires",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"ngrok http 5173\"",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -28,6 +28,7 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
+    "concurrently": "^9.2.1",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
